@@ -16,25 +16,29 @@ AUX texmakerx_my.pri 128 SHA256 b358c02f52abdaf6031729c6eac03301992534ba52153e59
 DIST texmaker-4.0.1.tar.bz2 13065488 SHA256 7ef9a5e1e24e734bfb7edb084ec6574fa3fc61b31685ca5402d6649a53a4e12d SHA512 85db34f670cad7d39c7acea5eefd61a9985f183277ddf758a3216dd322c0e43c21f94d2659fbe7dbcbf8f25d5df7c8c1408172214080d9234f4048499fbb8c4b WHIRLPOOL f24b1d0a9e79b18ef4a69bb1965827f1dd9cc75df1f36cfa2caacaf8686d08d78be9b2cf54edc939bbe700506428aa76f9b0daa144acfe8bb49c8b07f5729730
 DIST texmaker-4.1.1.tar.bz2 11258665 SHA256 9ff0a72d62021e1110319ed7d0d939938495797726716ae998bc006770ebb9c0 SHA512 5e8c7cb2ee1f71bdcff39ff432dc152e0ba3643b237b32524f08e16786507dc366cfbb839aa7071e4942de111ce0b311d1141d42f668f37369a79390afd5adba WHIRLPOOL 9343dfbb64c7d70490b43df16fe84d45b4fe9a3746d9eb952a0f4c7dfe4a5c80a7cfbddcfc9eaa3ef8eaf0dcdbd371e9bbf70703a3653df706f4cc2ecde1281a
 DIST texmaker-4.1.tar.bz2 10524563 SHA256 d5a460b15200421c68e10bf736cb3be0c26148de55f642a41be7226b6f89bc20 SHA512 2e29175ccca106e4097efa6e3dde1be3101fa22171d23532999a844720b1d63e81783b6a38ea7705b88951327edfc72ea5706afc260c02f1b69ef46d62b9011b WHIRLPOOL cb42fba1198e2deff90dc46c80e384129383f25010a7c62df327be7a5e165d9f97485fb13d899b0112a79fbe4210c4a74f629bf97c58b68d2d9ed6186c5a7256
+DIST texmaker-4.2.tar.bz2 11197970 SHA256 1bf7cb7e2cf4853a7f6ce3a11ec7f040e9a1a891ff9f5872b0181ea40e093e0b SHA512 31724044ea29021ddaa4e4acf71270873e2f38070834dfbff01c97d47a0e776f49fc2b42ca278fa11b848e18ebe206005eb5e4925c08f80ad4a04c921a93bc7f WHIRLPOOL 8b6b41e0ca9a0ca00b160204c7d1b8c60a8cec6acb891803c97eb9daaa44e45e5cc6e51aa2aa99b4645ac64ea34c6fa637a0f559c7b7a80d331897eae84e8746
 EBUILD texmaker-4.0.1.ebuild 1596 SHA256 9af39dffb6e7e3a8b7e7f235cf24b91c076ddf8234cb10312c145957a411e21f SHA512 5d9ee702dab8f128f43bcace0eec7ee8ab5e3f536faffe3688f2d633a41a5156f823bf993c4c2d1fd0a724e0efad86b75bbe22b9d658d02bd9325e8109f267be WHIRLPOOL a1fb4ed093cb551651e7f46c7a02fe8a9e1f41cb5846cba41bd9aff679afea3070ea114fb973040c67a1abe04c509508d4594f52dbff1bcba87f2f0e87f50b73
 EBUILD texmaker-4.1.1.ebuild 1973 SHA256 88fa33f5fca080b024dbde3d84cd37648d5c90b90b45e6fe696e702a67304053 SHA512 775648bb0eeaeff3029cfa8a4871361a577649e176d2ca66fe46b4b3563d12f976f879335d84741d9761433727f74cd60699048cd180fd85b2ae4231b8c230e4 WHIRLPOOL 03d6187d7114be5826f8217c578b9ac16e9344f6c9b69b4e1ec4a0dbe0036d61efeeccc3b1fc9830e6c346d8c086157b830056c04261246c2f4a00a5a4920572
 EBUILD texmaker-4.1.ebuild 1962 SHA256 c1f9f29626d00a26bd6972ed3c2c365e48a8b71344e83944257427d0deb50593 SHA512 1036858c1cc73e84489d73a58ef777cb9d4eda171bd7eb03628ebaf011bddafb01bc75eb99737cc815a310bfd89cddf99f33cf968903e970fa73f8896b54e4a3 WHIRLPOOL b9677259a88c05ca799fbff43d7abecf0b021e538c794594601c7e85d8fece6a61fd941858c96f8582253ecf85f25cb46225faafce9b640e0f8cddab4fd4639c
-MISC ChangeLog 20809 SHA256 bc2597b05ed439d5a6caa5fbaf2d2ae9df670d2cbce1a7ce0df96cec15c73043 SHA512 dbcd370bce9ff3b2cf93f0185d46b34355b974e6f5ba4bde7db967d4e2ffe18e189d640c3eb0f7c80f54121aa20c51e07fb58ffc74fcf36d77e10df03d9f5437 WHIRLPOOL a1cae68acf7bae7261970a904d034a1844708396f838db29e59f24e757fc260119f1eef56bd26f5053008a734f0b300748305352faa55df9211a259bfe737cd2
+EBUILD texmaker-4.2.ebuild 1990 SHA256 998a442d06572918b044469042e8fc19fb0eafe57c60640e13b107cf53cfe0e9 SHA512 175ad093e2f15d8645f6f7613a15aa33e54a80eeac6fc2b1245827e7fe5105e2dcf825f5f0a6ce4d26cbbcd94859adadc015b1393f3c60376e25eeb00368502d WHIRLPOOL e5d2bd5a7b3f0a6f30b8ec1571678a8b4328f33dd70ddcdbc6d9546d8c5016b4e67ad17b42dd796a2005c6d5499b592c942273db6e840e9a51754c71b7323ce9
+MISC ChangeLog 20923 SHA256 4443540886358ad1ee7eae1d567b91e8dcb239ef0b77b459bf3c83fc16747c85 SHA512 dac1434cac0de6e1cda786ea0e82928250b3a870e54004090a84e2da6916001b5d04cab71fdc5a5b99afb6f0ee5978ac84a7b87870345f17cd660e767ca5d47a WHIRLPOOL 89c6dd5ddaa0fa4960c6f3183f1f50c8a555993b0abf5e82944d9691fbafabeee4dce90b8d779fa70eaeeb99fbc2a595e8399df3140a5805ec9561eb1daa3044
 MISC metadata.xml 281 SHA256 2c7a572c26bbf24b0de55efe3ef0be56a2d9280869ffb4647791ce66f78a01bf SHA512 793f7f982c959f54c1af0f96a433837d031cf619190e57d784a5bb1f05503de72bf59329774c9efde5bf52c286eacd8032b366e1cc0ebaba94e110c326faa93d WHIRLPOOL f5324da1385ba50007e7f01f5d34f767f1cebefec780de74ade5c980c4d05e7e36590c6a8d79f5608201831daa6597e4a679b4e6a4e4ac33c2e09d94e554f5a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJS5nRmAAoJELnU8jG9FVirgIIP/AzxK/UpCjkHSzxNsWz+vfZp
-zhV3daq+YFS/ry+HhC9caRWFUA8aNJ5/BN3936rktrJ2irWS8rWOShE7355+Q6Pa
-d4onEtAz7qsmwH9Q0IKCd2XEpcnzMCOBYm9rGgKZ3uBoQWcWdNXZ5snod8wayCOg
-CjewiWq7CdXIrXak3tpV9ITcz0fx1wNwNoVgRWZ/TID95Wlh1+kxFkdaVwG69CV3
-5buANMJG1L9a3V30EK0Zhpr5z67wleRBsJLaLfrbA54UHvXltHXoHkziHwt6tVar
-0HzrgrPw4mHwlrfev/B79uXYfsUHXsM60JQMCQc5P4Ck7Ul1BA/ln/8QDcic3Oq2
-kHAWf3psbLGLK/ooXKu0Q4NdovU1HmbwXKVLVcl7gJtbs9lLmv04udzbQ1xaJv07
-YN9M/koaQHEn6C8RbIt9YK/zG5MBNiihQyPz5FBZ1tJVvArdIej3PJqXOQP1dTAo
-lY/tXem4xCsd2P6f2yrwTY77bAIDmKwnwlexTzJzwvyMFUytHKwuWvEoeV1IUQ0Z
-o78yopHKuKpyTHlm9z8Vy8VBsGRHpNwRbUMwdG7XhC6Py5ITuwPcR7X9WC6vWpxc
-7Vb4t97Jpfd4VPt8+OfAmI7rNkGudoPgQNvQ4n4fbNeFdThx7Aa+KyN1YXU3k0Bg
-0A3CDkak7LV8CwzPzf02
-=Vgxw
+iQJ8BAEBCgBmBQJTffa+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirvK4P/3/RLQ/GK9MxQCbp+uR/sYrm
+8hZlPsAchBMqc2Iq7abks7zw/mw78iGmK+DDH6OMwspkY8+g0KF+yOnm3t7n4m8v
+MC88Ouv64Wxbi2LyQ8jx3HWxmBeO8yNiHcrohKdn3JoV4gzWmJhw8EKy+Vlzno38
+km+/G1RUWzH6eOh89PsnZT8aI2wWMn3u23QUN3pMXxFchUkwX9p5+v4VF2Eazcdm
+rnZqbLF9430Wt3uXTKgwrxwH9NwaonAblg6rTDIpCg8A7E++YKUd0mmLyMehGgQO
+W+C5MtIFLYrba5OVuoT+0nIw33IQcboIL00HU12HmBGwAIZIKmyEjYNMxGV3BdXQ
+7hEblPLpe21TSdJvk6io+1DO3m0wK6kdbBKImhXIgCn/aFcYWdByVtB5cMHqOlcr
+LyNbaoIftjLU9pGaUbuulJoe4/wNOejZxhlkMYNQ/ovrE/l+T1HZ+qQdteO/Lpap
+idD+ZXq/iZaLWeOHfhpy2DDY4A8RyQn7EQ1QfSQRS961p6WtFs7Pe3mOi3jevJMd
+EC9sHZMFiRdi9Dhet4SHtfWITFw/41X5QDgEoegjbKOZfvwIujkbEMHekgYuZOwK
+Ga8mVSpiq9e7ZaLr0/lLRx6BVunRgY+1KBCCG52z1ot1HH7JGulPufeOjL47XmC6
+v0JRITck8dMh+uauhJ+l
+=gxuH
 -----END PGP SIGNATURE-----
