@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst prepare unpack
+DEPEND=app-text/hunspell app-text/poppler:=[qt4] sys-libs/zlib x11-libs/libX11 x11-libs/libXext dev-qt/qtgui:4 dev-qt/qtcore:4 dev-qt/qtscript:4 dev-qt/qtsingleapplication[X] dev-qt/qtwebkit:4 virtual/pkgconfig
+DESCRIPTION=A nice LaTeX-IDE
+EAPI=5
+HOMEPAGE=http://www.xm1math.net/texmaker/
+KEYWORDS=~amd64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
+LICENSE=GPL-2
+RDEPEND=app-text/hunspell app-text/poppler:=[qt4] sys-libs/zlib x11-libs/libX11 x11-libs/libXext dev-qt/qtgui:4 dev-qt/qtcore:4 dev-qt/qtscript:4 dev-qt/qtsingleapplication[X] dev-qt/qtwebkit:4 virtual/latex-base app-i18n/ibus-qt app-text/psutils app-text/ghostscript-gpl media-libs/netpbm
+SLOT=0
+SRC_URI=http://www.xm1math.net/texmaker/texmaker-4.2.tar.bz2
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	qmake-utils	6f4ff01a55830f6d86647dc56dfaf3a7	qt4-r2	25e4f17ed047d9242cb40b70acfb2943	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=7e928e4533c1ae274f46630c315478a5
