@@ -1,0 +1,10 @@
+DEFINED_PHASES=install
+DESCRIPTION=Monitoring application for www-servers/hiawatha
+EAPI=5
+HOMEPAGE=http://www.hiawatha-webserver.org/howto/monitor
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND==dev-lang/php-5*[mysql,xslt] virtual/cron virtual/mysql www-servers/hiawatha[xslt]
+SLOT=0
+SRC_URI=http://www.hiawatha-webserver.org/files/monitor-0.7.tar.gz
+_md5_=131d760f79ab37138581662840dcc8c1
