@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=ssl? ( >=net-libs/polarssl-1.3 ) xslt? ( dev-libs/libxml2 dev-libs/libxslt ) sys-devel/make >=dev-util/cmake-2.8.4 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=Advanced and secure webserver
+EAPI=5
+HOMEPAGE=http://www.hiawatha-webserver.org
+IUSE=debug +cache ipv6 monitor +rewrite rproxy ssl tomahawk +xslt
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+PDEPEND=monitor? ( www-apps/hiawatha-monitor )
+RDEPEND=ssl? ( >=net-libs/polarssl-1.3 ) xslt? ( dev-libs/libxml2 dev-libs/libxslt )
+SLOT=0
+SRC_URI=http://www.hiawatha-webserver.org/files/hiawatha-9.5.tar.gz
+_eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=b5f99cca81d236fb8beef119cc8375d4
