@@ -7163,6 +7163,12 @@ www-servers/cherokee:coverpage - Installs the default cherokee coverpage
 www-servers/cherokee:rrdtool - Enable rrdtool support
 www-servers/fnord:auth - Enable HTTP authentication support
 www-servers/gatling:diet - Compile against dev-libs/dietlibc
+www-servers/hiawatha:cache - Enable caching of content.
+www-servers/hiawatha:monitor - Pull in www-apps/hiawatha-monitor.
+www-servers/hiawatha:rewrite - Enable the rewrite toolkit.
+www-servers/hiawatha:rproxy - Allow Hiawatha to serve as a reverse proxy.
+www-servers/hiawatha:tomahawk - Enable Tomahawk control server.
+www-servers/hiawatha:xslt - Enable XSLT support. This is also needed for directory listings.
 www-servers/lighttpd:libev - Enable fdevent handler
 www-servers/lighttpd:memcache - Enable memcache support for mod_cml and mod_trigger_b4_dl
 www-servers/lighttpd:mmap - Use mmap with files owned by lighttpd. This is a dangerous option as it may allow local users to trigger SIGBUS crashes.
