@@ -1,0 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST monitor-0.7.tar.gz 417398 SHA256 ddd6c80fb6830a7ced3e7621d2ef5f668d25a8901cfa524f80d863df5ebde029 SHA512 e63470b89d9eb0c2caea7910fcfcc36959afa41c825cea7001c050c261b2e05a6834cfe6dcf8a9c5a449767ea4da534b8e2197ae87d5ba8e57db00573e95dfb5 WHIRLPOOL e09f55243db81a0f9c5b047068245f214aa62d94a8cbb26e1718c0f17cdb90632e343e2d1b286d14a7c5cb1a6dd944fd3064a397fdeddcf21e3453aff8bc871d
+EBUILD hiawatha-monitor-0.7.ebuild 732 SHA256 1c55b6251b5f8af5ab8d5b507d4a295059496028320ebfc4b99a6c2469f17cc6 SHA512 efe09407953afd92524e1f04531ed6820b370c066dd7cc69465ce27e3b121d5cc7f35877dbac3bc317a9db4d28714f95f568296ed5fa2a51afd52a1578a7bf72 WHIRLPOOL 54d1abf0e9fe20e85f7bb5f17ecc14b7af6b67a1be69434aba7ddab7e79ab4d229a94dc6106263ea957d2cbc359f498b1a35a615dd805010bb531fe652ed3d42
+MISC ChangeLog 390 SHA256 7da84bafbfd36361b16dd534ffdf0b26335c15bfeb9680ddea51470751291e25 SHA512 65f2f25ddfd232c5a9604775c79d48bc770fe6caa62f8bed2d0523585fca99ec096ff34ea48a016b94c2e632c37a420196a15333744fe6fc3fc76f487033e31a WHIRLPOOL 3d0510215bb217a7e7347d6f7264e4e3d6e467f8275eea5abfd2959a3cba0637a87a4a6a1db4f6fcc093242f64225da8269c1d0a8bf775059c8f4f1d2e3e42d6
+MISC metadata.xml 287 SHA256 7d2b8e8645d0761d2a2acbf6c6c89ffe41279039378b9f5c9b8cdb874ff99f5a SHA512 2e02f1a8b4d85cad3c6eff6489a55c37f0a329c44e66276164930cd3388d91d1e7e2e5c1187ebb9d67b6390c313eea215dc8ea5fd2c0603f8b864423625f8ff9 WHIRLPOOL 2d237695e2d1f639bd79b91f81e5a10ee626d5e38a37f5a46d13320af1f4707eb65446cefd3b367f95168816b1c6fd7bde33b7fcd20c56a68cd089d2866f885e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQJ8BAEBCABmBQJTfflhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgytMP/1MLXisCuMDxPNjMlzCG1XoS
+MfdKOGjqbhQe3pkJEiAXke2UlRpfHRyQhPKcxvdIqZ4PeqWVXBAbj3Udzhk0Octp
+SrEajt3+4TG3uw0JjneEjKoHfy59OIn4RiNC0j1BhsDV85UNw2cJpfhJJcL9YChu
+2P/G8KLSkV7hy8bs5z0TYYyU8C+UvQQBJxPJd/cM1ZlhBcQFfBGlgH1HDe3BhxAE
+SOEKDms6RBAx7jq7hZiQrnY+a2ti3TSIO8idgkL5EoluGS2bhQ2JehAxPQrq90yl
+IsaydcAnjaVcAnBDYjihFUcF41CRsL3JUnmI3cwyFeZ8xZxLX6ocgOXNoALdJhDj
+qihITjIFeuLS3zyD3RMF1BhSqhZXxInk8b+EFEwZH+PFGKPtcZMMEWeNOlzq8Y0z
+8FO/1BIHjPKsfSzGagqoXsUZRpkiO4T5VZCCCE0LbnXCEnJEv35/b5a23GjYJkjz
+R9FfRez46A1aXa6miWfCvdHP6VrlTBtVuD5Q+s4elMlaJSnbPW+gbTtiVu61hd+i
+aaOQksTvxFyyVTlOpovp18xLeRdasPXFYyV4k1/MmbUZO0b4mHyeNo6jRBU/bgoA
+Ejds/yLNmGY49PIvZtjlbGrJYfSH1Lfme3f9A0j6Fk3xIxUw2FK37OI7d06HcyY2
+FIyzBh2aCLnvIExr068c
+=jkNS
+-----END PGP SIGNATURE-----
