@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<maintainer>
+		<email>hasufell@gentoo.org</email>
+	</maintainer>
+	<upstream>
+		<remote-id type='github'>hsleisink/monitor</remote-id>
+	</upstream>
+</pkgmetadata>
