@@ -1,0 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX hiawatha.initd 571 SHA256 17da2101aaad6f6d48d6d9f0f12ec6287f5d1af3230121f47eb87363f6cfb9c9 SHA512 70ce782d7faacbf46e6058b8301f6134661b07a58d3e827a67935143fe88cd38954efc829eb07a59b477fa77b65145bc5e5dd1eaa1bb7eda3f895de5a29b4303 WHIRLPOOL 3c16c22f43ef7feed786a283e199d6fa87057a04f1b53ab5cf0f421feead913ea9b0582839f884f533211f1e22db4f4bd057bbbbba49bd9e75c25b8ef6936ed5
+DIST hiawatha-9.5.tar.gz 847545 SHA256 c181011db1af187006190fc186689a0707a6f1e7b524c2a4347840e8fdf68b4f SHA512 54c97b6cb7a94cbccc5e1dd0a8c78b9f5f44da250309e09de8601e34bea9ae56a02c9ec7c9eed6cf3814bc98733cc6143ddc37dfa44ea1add8f4f63d56d3e7a3 WHIRLPOOL a612ff56ac0a649bb339197cfdddb67106c9657fe4a25bd8c35cb18fec222557da8e11360570c0f1db9982f9b41fb175e02ab71c5caf034ca6b83f98a2d90a35
+EBUILD hiawatha-9.5.ebuild 2283 SHA256 24563f3cecdc6b32cf76ff45ebd6cb3a3cf83a25e13e6d68a22ad57a1ac374b2 SHA512 d984e0e07e4525ffad31dc117f848cf6d96829075c4d7b700a682a40535c97b277a4402693eb5e0a252d0de8738a087b57610dc60f596305ab3ee0d500536881 WHIRLPOOL 61b2d1a11569473cae45278719fa784dcc010c31a3743db0d9b9d505e9535bce70c61592fa5b612f4445646bebb2b684be38453687df21d9405b86064ed5cbfa
+MISC ChangeLog 477 SHA256 1aab4097920fe64e9d62a570856144b7f875beae3083fdb939b6ff9bc5d55ad2 SHA512 b1d9e52f173a0762b82d8e9326684ab89da9bfb3cc7d67cbd9637835da8cedc6c4c67b95295494dc34e67d66c1c654022d56e2621ecf0327eaf8a05cbce04992 WHIRLPOOL deb512cfddd721196727663344ccf76ae89938550697ed4ac6fff00a8362737dfd72ddc85adc71870720a2dbff6e0fa25c35387b94f535dbedfdf2d8a6ccc2db
+MISC metadata.xml 712 SHA256 bdeebe9f480e4506078a1ada7f8ab34d618d35de402f53c26b6ff6489c9688a9 SHA512 3c7504874858971052b0646078c8fde703c051f7301b740428bd144f03a4c159517d003474504ba8666982535e130cee89c544c70e8c6833996323ba517ca6d3 WHIRLPOOL 92e4b695e3b4a97e9204d73fa9a31886933887b48fe1c8ce8ec7129fd2bf68d8e9e36b2a5e0e342e7a2c72f147bd37be7371d412a300099ef8d120576e45f941
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQJ8BAEBCABmBQJTfflPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgCLoP/R8S43gzK71w63gx0aLL+cIW
+XYb/cm3pNWTe0p/y9DGaGYaNFgZ3Lhyfyn5sbEKHVydcQachbIoBKjT7/RXyLMMh
+7MjOdtN8UsTMcerbOilGHz9/0JHGj/u9kWlpo7mBrx2Eie9UlvWPxhvS4O7VeChE
+kvUjZl225clVqVSHEGHmraTl1XnkJ8joMu2TgzeJjguBO3tSc+g1fJ1Qe+Qw8y+r
+nWgSrKePgoP3YgUQbE5CGzaPArT2JsrlUgHN1/l1kxyq8jridrwsVMHAyGGv3F7F
+XZfO398x56baTc+Th+XA9iGQKE0qEcT7leNzNFNwbBnCXA76DLXIcgiUt9sQV3j9
+p20vyVKGuo293jCT92RUNsRtujvpXeqFdWsQ5WZCzkhJYzm9tNvjj3ZqZTdNnFlz
+JwfzqRGHHP+XlWHiLL0yopVYgTFPUl6wuQ7x2bwdn2x/KNzhKwPPorHUClT0IErG
+RYcd8ZYGii+kK6TGRcLuy/mkh7rAzzXwYwQq8r42AeB2aUQw+qSa3SEkmol4WLWL
+ycZRoblTwGBcZO1PKuedvDOJfRhVa4PLqFUmqAPgm8SM8cA1Cn3BUIpagjtSu8Ko
+0RxF28wsiyaIGx6jjwP7Pq9Exkc78RQXAzOAf5jbWaUevSxY+gpEB1cIr92kRNIL
+A0XPriL0swndT72V1amC
+=PbUT
+-----END PGP SIGNATURE-----
