@@ -1,0 +1,26 @@
+#!/sbin/runscript
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/www-servers/hiawatha/files/hiawatha.initd,v 1.1 2014/05/22 13:16:22 hasufell Exp $
+
+depend() {
+	need net
+}
+
+start() {
+	ebegin "Starting ${SVCNAME}"
+	start-stop-daemon \
+		--start \
+		--exec "/usr/sbin/hiawatha" \
+		--pidfile "/var/run/hiawatha.pid"
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping ${SVCNAME}"
+	start-stop-daemon \
+		--stop \
+		--exec "/usr/sbin/hiawatha" \
+		--pidfile "/var/run/hiawatha.pid"
+	eend $?
+}
