@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<maintainer>
+		<email>hasufell@gentoo.org</email>
+	</maintainer>
+	<use>
+		<flag name='cache'>Enable caching of content.</flag>
+		<flag name='monitor'>Pull in www-apps/hiawatha-monitor.</flag>
+		<flag name='rewrite'>Enable the rewrite toolkit.</flag>
+		<flag name='rproxy'>Allow Hiawatha to serve as a reverse proxy.</flag>
+		<flag name='tomahawk'>Enable Tomahawk control server.</flag>
+		<flag name='xslt'>Enable XSLT support.
+			This is also needed for directory listings.</flag>
+	</use>
+	<upstream>
+		<remote-id type='github'>hsleisink/hiawatha</remote-id>
+	</upstream>
+</pkgmetadata>
