@@ -1,0 +1,10 @@
+# ChangeLog for www-apps/hiawatha-monitor
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/hiawatha-monitor/ChangeLog,v 1.1 2014/05/22 13:19:28 hasufell Exp $
+
+*hiawatha-monitor-0.7 (22 May 2014)
+
+  22 May 2014; Julian Ospald <hasufell@gentoo.org>
+  +hiawatha-monitor-0.7.ebuild, +metadata.xml:
+  initial import wrt #466588
+
