@@ -1,0 +1,12 @@
+# ChangeLog for www-servers/hiawatha
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-servers/hiawatha/ChangeLog,v 1.2 2014/05/22 13:19:10 hasufell Exp $
+
+  22 May 2014; Julian Ospald <hasufell@gentoo.org> hiawatha-9.5.ebuild:
+  add ~x86 keyword
+
+*hiawatha-9.5 (22 May 2014)
+
+  22 May 2014; Julian Ospald <hasufell@gentoo.org> +hiawatha-9.5.ebuild,
+  +files/hiawatha.initd, +metadata.xml:
+  initial import wrt #65259
