@@ -1,6 +1,11 @@
 # ChangeLog for app-office/texmaker
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/texmaker/ChangeLog,v 1.139 2014/01/27 14:59:49 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/texmaker/ChangeLog,v 1.140 2014/05/22 13:08:13 jlec Exp $
+
+*texmaker-4.2 (22 May 2014)
+
+  22 May 2014; Justin Lecher <jlec@gentoo.org> +texmaker-4.2.ebuild:
+  Version BUmp
 
   27 Jan 2014; Justin Lecher <jlec@gentoo.org> texmaker-4.1.1.ebuild:
   Add missing USE dep
